--- a/vignettes/using_rspeciesLink.Rmd
+++ b/vignettes/using_rspeciesLink.Rmd
@@ -26,7 +26,7 @@ This package downloads information from the [speciesLink API](http://api.splink.
 
 ## Example 1: basic search
 
-Search for records of *Eugenia platyphylla* and *Chaetocalyx acutifolia* in speciesLink API. Same as: http://api.splink.org.br/records/ScientificName/Eugenia platyphylla/Chaetocalyx acutifolia/scope/plants
+Search for records of *Eugenia platyphylla* and *Chaetocalyx acutifolia* in speciesLink API. Same as: [http://api.splink.org.br/records/ScientificName/Eugenia%20platyphylla/Chaetocalyx%20acutifolia/scope/plants](http://api.splink.org.br/records/ScientificName/Eugenia%20platyphylla/Chaetocalyx%20acutifolia/scope/plants)
 
 ```{r}
 sp1 <- "Eugenia platyphylla"
@@ -36,7 +36,7 @@ sp2 <- "Chaetocalyx acutifolia"
 Setting scope `"plants"`. 
 
 ```{r}
-ex01 <- spLink_url(filename = "ex01",
+ex01 <- rspeciesLink(filename = "ex01",
                    scientificname =  c(sp1, sp2),
                    Scope="plants")
 ```
@@ -73,12 +73,11 @@ knitr::kable(data.frame(columns=sort(names(ex01$data))))
 
 Search for *Rauvolfia selowii* and *Cantinoa althaeifolia*. Now using `collectioncode` and `Images` arguments.
 
-Same as :http://api.splink.org.br/records/CollectionCode/uec/scientificname/Rauvolfia%20sellowii/Cantinoa%20althaeifolia/Images/yes
-
+Same as: [http://api.splink.org.br/records/CollectionCode/uec/scientificname/Rauvolfia%20sellowii/Cantinoa%20althaeifolia/Images/yes](http://api.splink.org.br/records/CollectionCode/uec/scientificname/Rauvolfia%20sellowii/Cantinoa%20althaeifolia/Images/yes)
 
 ```{r}
-ex02 <- spLink_url(filename = "ex02",
-                   CollectionCode = "uec",
+ex02 <- rspeciesLink(filename = "ex02",
+                   collectioncode = "uec",
                    scientificname = c("Rauvolfia sellowii", "Cantinoa althaeifolia"),
                    Images="Yes")
 ```
@@ -112,10 +111,10 @@ unique(ex02$data$collectioncode)
 For species *Tillandsia stricta*. 
 
 ```{r}
-ex03 <- spLink_url(filename = "ex03",
+ex03 <- rspeciesLink(filename = "ex03",
                    scientificname = "Tillandsia stricta",
                    Coordinates = "Yes",
-                   coordinatesQuality = "Good")
+                   CoordinatesQuality = "Good")
 ```
 
 Checking if species is in the output.
@@ -137,7 +136,7 @@ Now with another selection of coordinate quality.
 
 ```{r}
 # outra selecao de qualidade de coordenadas
-ex03b <- spLink_url(filename = "ex03b",
+ex03b <- rspeciesLink(filename = "ex03b",
                    scientificname = "Tillandsia stricta")
                    #coordinatesQuality = "Bad")
 ```
@@ -158,13 +157,12 @@ head(ex03b$data)
 Listing files on list. 
 
 ```{r}
-list.files("results/", pattern = '.csv')
+resu <- list.files("results", pattern = '.csv', full.names=TRUE)
 ```
 
 
 ```{r}
-a <- readr::read_csv("results/ex02.csv")
-head(a)
+all.resu <- lapply(resu, read.csv)
 ```
 
 
