--- a/vignettes/using_rjabot.Rmd
+++ b/vignettes/using_rjabot.Rmd
@@ -2,7 +2,7 @@
 title: "Downloading Jabot data from R"
 output: rmarkdown::html_vignette
 vignette: >
-  %\VignetteIndexEntry{my-vignette}
+  %\VignetteIndexEntry{jabot}
   %\VignetteEngine{knitr::rmarkdown}
   %\VignetteEncoding{UTF-8}
 ---
