--- a/vignettes/check_taxa.Rmd
+++ b/vignettes/check_taxa.Rmd
@@ -54,17 +54,18 @@ species <- c("Lindsaea lancea var. falcata", "Asplenium Aff. truncorum",
              "cf. Piper dilatatum", "Piper dilatatum sp. nov.", 
              "aff. Piper dilatatum", "Miconia albicans (Sw.) Triana", 
              "Miconia albicans (Sw.) TRIana", "Bowlesia incana f. crassifolia", 
-             "Gleicheniales",  "incertae sedis", "Chamissoa acuminata Mart. var. acuminata", 
-             "Entrophospora R.N. Ames & R.W. Schneid. 1979", "Schinopsis brasiliensis var. glabra Engl.", 
+             "Gleicheniales", "Entrophospora R.N. Ames & R.W. Schneid. 1979",
+             "Chamissoa acuminata Mart. var. acuminata", "incertae sedis", 
+              "Schinopsis brasiliensis var. glabra Engl.", "Byrsonima rich.",
              "Peronospora hyoscyami f. sp. tabacina Skalický", "Bla bla Fulano f.", 
              "Syagrus ×andrequiceana", "Agalinis itambensisxangustifolia?", 
-             "Byrsonima rich.", "Morganella rimosa Baseia & Alfredo sp. nov.", 
+              "Morganella rimosa Baseia & Alfredo sp. nov.", "S polyphylla", 
              "Leandra euphorbioides (Naudin) D`El Rei Souza & Baumgratz", 
-             "Cyrtocymura harleyi (H.Rob.) H.Rob.", "S polyphylla", 
+             "Cyrtocymura harleyi (H.Rob.) H.Rob.", "Metrodorea mollis",
              "Phaseolus robustus Piper", "Catasetum ×splendens Cogn.", 
-             "Catasetum ×evangelistae V.P.Castro & G.F.Carr", "Metrodorea mollis",
-             "Salvinia ×delasotae C.V. Miranda & Schwartsb.", "Helietta glaziovii", 
-             "Drosera ×fontinalis Rivadavia", "Diplazium lepthochlamys")
+             "Catasetum ×evangelistae V.P.Castro & G.F.Carr", "Helietta glaziovii",
+             "Drosera ×fontinalis Rivadavia", "Diplazium lepthochlamys", 
+             "Salvinia ×delasotae C.V. Miranda & Schwartsb.")
 
 df <- check_string(species)
 ```
