renaming _bfg to _flora

--- a/vignettes/check_taxa.Rmd
+++ b/vignettes/check_taxa.Rmd
@@ -94,13 +94,13 @@ species_new <- unique(df_ok$scientificName_new)
 First, we will check for typos and get a list of possible names. 
 
 ```{r suggest}
-suggest_taxa <- suggest_bfg(species_new)
+suggest_taxa <- suggest_flora(species_new)
 search_taxa <- na.omit(as.character(unique(suggest_taxa$scientificName_suggest)))
 ```
 
 
 ```{r check_taxon} 
-list_taxa <- lapply(search_taxa, check_bfg)
+list_taxa <- lapply(search_taxa, check_flora)
 ```
 
 ### Output
