--- a/vignettes/check_taxa.Rmd
+++ b/vignettes/check_taxa.Rmd
@@ -68,7 +68,8 @@ species <- c("Lindsaea lancea var. falcata", "Asplenium Aff. truncorum",
              "Salvinia ×delasotae C.V. Miranda & Schwartsb.", "Anemia x elephantensis", 
              "Abutilon bedfordianum discolor", "Bauhinia ungulata cuiabensis", 
              "Cf. Lagenocarpus cf. rigidus", "Lychnophora staavioides aff. uniflora",
-             "Pityrogramma] calomelanos calomelanos", "Chamaecrista asplenÃ¼plia")
+             "Pityrogramma] calomelanos calomelanos", "Chamaecrista asplenÃ¼plia", 
+             "Myrcia multifloravar.glaucensis")
 
 df <- check_string(species)
 ```
