--- a/vignettes/searching_flora.Rmd
+++ b/vignettes/searching_flora.Rmd
@@ -21,7 +21,7 @@ Package `rocc` allows the user to perform searches in the List of Species of the
 These functions download the IPT files from FB2020 to a temporary file in the computer, using package __finch__. This download can be __very slow__ the first 
 time and when in disk the database will access the cached files instead of downloading them. 
 
-## `update_flora()`
+## Function `update_flora()`
 
 `update_flora()` will download the ipt files into folder data-raw. If a previous file exists in cache, it won't update unless `force_update = TRUE`.
 
@@ -29,7 +29,8 @@ time and when in disk the database will access the cached files instead of downl
 Also, the function returns __all name ids irrespective of their taxonomic status__
 
 
-# Function `search_flora()`
+## Function `search_flora()`
+
 Function `search_flora()` returns lists of scientific names (in full format) for species in:
 
 - one or more phytogeographic domains
@@ -52,17 +53,17 @@ head(caatinga)
 dim(caatinga)
 ```
 
-```{r }
+```{r pb}
 pb <- search_flora(states = "PB")
 head(pb)
 dim(pb)
 ```
 
-```{r}
+```{r intersect}
 length(intersect(caatinga$id, pb$id))
 ```
 
-```{r}
+```{r pb-and-caatinga}
 pb_and_caatinga <- search_flora(domain = "Caatinga",
                                 state = "PB")
 head(pb_and_caatinga)
@@ -70,7 +71,7 @@ dim(pb_and_caatinga)
 ```
 
 
-```{r}
+```{r not-endemic}
 pb_and_caatinga_and_not_endemic <- search_flora(domain = "Caatinga",
                                                 state = "PB",
                                                 endemism = FALSE)
@@ -78,7 +79,7 @@ head(pb_and_caatinga_and_not_endemic)
 dim(pb_and_caatinga_and_not_endemic)
 ```
 
-```{r}
+```{r endemic}
 pb_and_caatinga_and_endemic <- search_flora(domain = "Caatinga",
                                             state = "PB",
                                             endemism = TRUE)
@@ -86,11 +87,11 @@ head(pb_and_caatinga_and_endemic)
 dim(pb_and_caatinga_and_endemic)
 ```
 
-```{r}
+```{r arvore}
 pb_and_caatinga_and_endemic_and_tree <- search_flora(domain = "Caatinga",
-                                            state = "PB",
-                                            endemism = TRUE,
-                                            lifeform = "Árvore")
+                                                     state = "PB",
+                                                     endemism = TRUE,
+                                                     lifeform = "Árvore")
 head(pb_and_caatinga_and_endemic_and_tree)
 dim(pb_and_caatinga_and_endemic_and_tree)
 ```
